Add recent blogs on index.js

--- a/posts/functions-for-beginner.mdx
+++ b/posts/functions-for-beginner.mdx
@@ -1,6 +1,6 @@
 ---
 title: Functions for Beginners
-date: 'August 4, 2021'
+date: '2021-08-04'
 description: Learn how to create and use functions
 thumbnailUrl: '/javascript-functions-thumbnail.jpeg'
 tags: ['functions', 'javascript']
