--- a/posts/backend.mdx
+++ b/posts/backend.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Which Back End Should I Use As A Front-End Developer?'
-date: 'September 2, 2021'
+date: '2021-09-02'
 description: "Choosing a service to store data can be confusing and overwhelming for a front-end developer. This comprehensive guide is a choose your own adventure dive into creating your backend."
 thumbnailUrl: "/back-end.png"
 tags: ['backend']
