--- a/posts/tailwind-setup.mdx
+++ b/posts/tailwind-setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'How to set up Tailwind CSS'
-date: 'September 2, 2021'
+date: '2021-09-15'
 description: "Here's a short guide on setting up Tailwind CSS"
 thumbnailUrl: "/tailwindcss-thumbnail.jpg"
 tags: ['tailwindcss', 'styling']
